# shipmentDemo

./: .env  README.md  check_shipment_field.py  check_shipment_requirements.py  cv.html  cwiczenia.py  db.py  decorators.py  main.py  pyproject.toml  shipments.db  shipments.json  type_hints.py
app/: main.py
app/models/: shipment.py
app/routers/: shipments.py
app/schemas/: shipment.py
app/services/: shipment_service.py
cwiczenia_fun/: compe.py  cwiczenia.py  cwiczenia_2.py  cwiczenia_3.py  py_test.py
models/: config.py  model.py  session.py  shipment_model.py
react-fun/: index.html  style.css
react-fun/archive/: dirty.html  index.html  index2.html  index3.html  index4.html  style.css
tests/: test_shipments.py
