[project]
name = "css-html"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "fastapi[all]>=0.136.3",
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.17",
]
